Fixed Sonar integrations.